--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,7 @@ body {
   background-color: #fff;
   border-top: 2px solid var(--red);
   border-radius: 20px;
+  max-width: 90rem;
   margin-top: 180px;
   padding: 2rem;
 }
